# ansistream

./: Cargo.toml  LICENSE  README.md
examples/: 16color.rs  256color.rs  color_loop.rs  poetry.rs  styles.rs  test_4bit_color.rs  truecolor.rs
src/: lib.rs
tests/data/: vmpoetry.txt
