[package]
name = "ansistream"
version = "0.1.0"
edition = "2021"

[[example]]
name = "16color"
path = "examples/16color.rs"

[[example]]
name = "256color"
path = "examples/256color.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
strip = true
lto = "thin"
opt-level = "z"
panic = "abort"