[package]
name = "ansistream"
version = "0.1.6"
edition = "2021"
repository = "https://github.com/jgardona/ansistream"
homepage = "https://github.com/jgardona/ansistream"
description = "Write blazingly fast, free allocation ansi escape codes to a buffer, and flushes them all to any output."
license = "MIT"
categories = ["development-tools"]
keywords = ["ansi-escape-code", "terminal"]

[[example]]
name = "16color"
path = "examples/16color.rs"

[[example]]
name = "256color"
path = "examples/256color.rs"

[[example]]
name = "truecolor"
path = "examples/truecolor.rs"

[[example]]
name = "styles"
path = "examples/styles.rs"

[[example]]
name = "poetry"
path = "examples/poetry.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
strip = true
lto = "thin"
opt-level = "z"
panic = "abort"